--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,28 +8,16 @@ exclude: |
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v5.0.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: mixed-line-ending
         args: [ '-f=lf' ]
       - id: double-quote-string-fixer
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.10.1
-    hooks:
-      - id: pyupgrade
-        args: [--py37-plus]
-  - repo: https://github.com/pycqa/isort
-    rev: 5.12.0
-    hooks:
-      - id: isort
-  - repo: https://github.com/psf/black
-    rev: 23.9.1
-    hooks:
-      - id: black
-  - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: 'v0.0.289'
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: 'v0.11.11'
     hooks:
       - id: ruff
         args: ['--fix']
+      - id: ruff-format
